--- a/kubernetes-2/values.yaml
+++ b/kubernetes-2/values.yaml
@@ -1,3 +1,14 @@
+
+
+#This is my customized values for inginx controller
+#This is the customized values:
+#controller.admissionWebhooks.failurePolicy: Ignore
+#controller.service.ports.http: 80
+#controller.service.ports.https: 443
+
+
+
+
 ## nginx configuration
 ## Ref: https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/nginx-configuration/index.md
 ##
