--- a/kubernetes-2/roles/kubernetes-worker/tasks/main-vars.yml
+++ b/kubernetes-2/roles/kubernetes-worker/tasks/main-vars.yml
@@ -39,8 +39,6 @@
   - net.bridge.bridge-nf-call-ip6tables = 1
   - net.ipv4.ip_forward                 = 1
   register: sysctl_file_state
-  # notify: 
-  # - reload sysctl
 
 - name: reload sysctl
   ansible.builtin.command:
@@ -68,17 +66,13 @@
       {{ cmd_result.stdout }}
     create: true      
   when: k8s_prerequists_state.changed == true      
-  # notify:
-  # - restart containerd  
 
 - name: configure containerd config file 
   lineinfile: 
     path: /etc/containerd/config.toml
     regexp: '^            SystemdCgroup = '
     line: '            SystemdCgroup = true'
-  when: k8s_prerequists_state.changed == true      
-  # notify:
-  # - restart containerd  
+  when: k8s_prerequists_state.changed == true
 
 - name: removing ansible marker from /etc/containerd/config.toml
   ansible.builtin.lineinfile:
@@ -97,19 +91,17 @@
   stat:
     path: /etc/apt/keyrings/kubernetes-apt-keyring.gpg
   register: stat_result
-- debug: 
-    var: stat_result.stat.exists
+- debug:  var=stat_result.stat.exists
+
 - name: Add k8s key
-  ansible.builtin.shell: curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.28/deb/Release.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+  ansible.builtin.shell: curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
   when: not stat_result.stat.exists
-# - name: add k8s repo
-#   ansible.builtin.command:
-#     cmd: echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.28/deb/ /' | tee /etc/apt/sources.list.d/kubernetes.list
+
 - name: configure file /etc/apt/sources.list.d/kubernetes.list
   ansible.builtin.blockinfile:
     path: /etc/apt/sources.list.d/kubernetes.list
     block: |
-      deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.28/deb/ /
+      deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /
     create: true
 
 - name: Check if file /etc/kubernetes/pki/ca.crt exists
@@ -126,20 +118,32 @@
   ansible.builtin.apt:
     update_cache: yes
     pkg:
-      - kubelet=1.28.2-1.1
-      - kubeadm=1.28.2-1.1
-      - kubectl=1.28.2-1.1
+      - kubelet=1.29.0-1.1
+      - kubeadm=1.29.0-1.1
+      - kubectl=1.29.0-1.1
     allow_downgrade: true
+
+- name: Copy join_command.sh
+  become: yes
+  become_user: root
+  copy:
+    src: ../../join_command.sh
+    dest: /home/ubuntu/join_command.sh
+    mode: 755
+    remote_src: false
+
+#- name: apply join_command.sh
+#  ansible.builtin.shell: sudo /home/ubuntu/join_command.sh
 
 - name: output the register variable value
   debug:
-    var:  hostvars['${master_public_ip}']['kubeadm_command_output']['stdout']      
+    var:  hostvars['${master_public_ip}']['kubeadm_command_output']['stdout']
 - name: output the register variable value
   debug:
     var:  hostvars['master_instaall_kubeadm']['kubeadm_command_output']['stdout']
-- name: kubeadm join 
-  ansible.builtin.command: 
-    cmd: "{{hostvars['${master_public_ip}']['kubeadm_command_output']['stdout']}}"      
-  when: 
-  - not kube_join_stat.stat.exists                       
+- name: kubeadm join
+  ansible.builtin.command:
+    cmd: "{{hostvars['${master_public_ip}']['kubeadm_command_output']['stdout']}}"
+  when:
+  - not kube_join_stat.stat.exists
   # - not hostvars['${master_public_ip}']['kube_init_stat']['stat']['exists']
