--- a/kubernetes-2/master-node-vars.yml
+++ b/kubernetes-2/master-node-vars.yml
@@ -35,8 +35,10 @@
 
 - name: worker2 hostname && local dns
   hosts: ${worker2_public_ip}
-  become: yes  
+  become: yes
   tasks:
+#  - name: update apt repo & cache
+#    apt: update_cache=yes force_apt_get=yes cache_valid_time=3600 upgrade=dist
   - name: Set a hostname
     ansible.builtin.hostname:
       name: worker2
@@ -59,6 +61,8 @@
 
 - name: master Deploy ingress nginx && myapp
   hosts: ${master_public_ip}
+#  become: yes
+#  become_user: ubuntu
   gather_facts: no
   tasks:
   - name: copy helm values file
@@ -77,5 +81,8 @@
       cmd: kubectl apply -f /home/ubuntu/myapp.yaml
 
 
+  # - name: output the register variable value
+  #   debug:
+  #     var:  hostvars['13.50.110.214']['kubeadm_command_output']['stdout']
 
   # ansible-inventory --list
