--- a/kubernetes-2/roles/kubernetes-worker/tasks/main.yml
+++ b/kubernetes-2/roles/kubernetes-worker/tasks/main.yml
@@ -1,4 +1,28 @@
 ---
+- debug: var=ansible_facts
+
+- name: Gathering info
+  action: setup
+
+- name: Filter and return only selected facts
+  ansible.builtin.setup:
+    filter:
+      - 'ansible_distribution'
+      - 'ansible_machine_id'
+      - 'ansible_facts.default_ipv4.address'
+
+- name: making some alias
+  ansible.builtin.blockinfile:
+    path: /etc/bash.bashrc
+    block: |
+      alias c=clear
+      alias k=kubectl
+      alias la='ls -lahF'
+
+- name: Set a hostname
+  ansible.builtin.hostname:
+    name: worker
+
 - name: Install a list of packages
   ansible.builtin.apt:
     update_cache: true
@@ -7,9 +31,11 @@
     - ca-certificates
     - curl
     - gpg
+
 - name: disable swap
   ansible.builtin.command:
     cmd:  swapoff -a
+
 - name: configure k8s prerequists
   ansible.builtin.lineinfile:
     path: /etc/modules-load.d/k8s.conf
@@ -50,6 +76,7 @@
     pkg:
     - containerd
     update_cache: yes
+
 - name: start & enable containerd.service
   systemd:
     name: containerd
@@ -91,6 +118,7 @@
   stat:
     path: /etc/apt/keyrings/kubernetes-apt-keyring.gpg
   register: stat_result
+
 - debug:  var=stat_result.stat.exists
 
 - name: Add k8s key
@@ -111,9 +139,10 @@
 - debug: 
     var: kube_join_stat.stat.exists
 
-- name: update apt repo & cache
-  apt:
-    update_cache: yes
+#- name: update apt repo & cache
+#  apt:
+#    update_cache: yes
+
 - name: Install kubeadm
   ansible.builtin.apt:
     update_cache: yes
@@ -131,19 +160,21 @@
     dest: /home/ubuntu/join_command.sh
     mode: 755
     remote_src: false
+  when: not kube_join_stat.stat.exists
 
-#- name: apply join_command.sh
-#  ansible.builtin.shell: sudo /home/ubuntu/join_command.sh
+- name: apply join_command.sh
+  ansible.builtin.shell: sudo /home/ubuntu/join_command.sh
+  when: not kube_join_stat.stat.exists
 
-- name: output the register variable value
-  debug:
-    var:  hostvars['3.144.75.191']['kubeadm_command_output']['stdout']
-- name: output the register variable value
-  debug:
-    var:  hostvars['master_instaall_kubeadm']['kubeadm_command_output']['stdout']
-- name: kubeadm join
-  ansible.builtin.command:
-    cmd: "{{hostvars['3.144.75.191']['kubeadm_command_output']['stdout']}}"
-  when:
-  - not kube_join_stat.stat.exists
-  # - not hostvars['3.144.75.191']['kube_init_stat']['stat']['exists']
+#- name: output the register variable value
+#  debug:
+#    var:  hostvars['3.144.75.191']['kubeadm_command_output']['stdout']
+#- name: output the register variable value
+#  debug:
+#    var:  hostvars['master_instaall_kubeadm']['kubeadm_command_output']['stdout']
+#- name: kubeadm join
+#  ansible.builtin.command:
+#    cmd: "{{hostvars['3.144.75.191']['kubeadm_command_output']['stdout']}}"
+#  when:
+#  - not kube_join_stat.stat.exists
+#  # - not hostvars['3.144.75.191']['kube_init_stat']['stat']['exists']
